# varnheimer-holzfisch

./: Cargo.toml
.github/workflows/: rust.yml
dioxus-test-utils/: Cargo.toml
dioxus-test-utils/src/: event.rs  lib.rs  select.rs  signal.rs
dioxus-test-utils/src/event/: focus.rs  form.rs  mod.rs  mouse.rs
engine/: Cargo.toml
engine/src/: lib.rs
engine/tests/: skill_checks.rs
frontend/: Cargo.toml  Dioxus.toml
frontend/assets/: checkbox.scss  common-controls.scss  main.css  main.scss  modifier-input.scss  number-input.scss  scholle.scss  table.scss
frontend/src/: display.rs  evaluate.rs  lib.rs  main.rs  test_util.rs
frontend/src/components/: basic_fields.rs  checkbox.rs  evaluated_probabilities_view.rs  evaluation_outcome_view.rs  evaluation_result_view.rs  flex_break.rs  flex_spacer.rs  mod.rs  model_value_fields.rs  modifier_state.rs  number_input.rs  scholle_input.rs  skill_check_state.rs
frontend/tests/: skill_check_evaluation.rs
model/: Cargo.toml
model/benches/: skill_check.rs
model/src/: check.rs  engine.rs  evaluation.rs  lib.rs  modifier.rs  probability.rs  roll.rs  skill.rs  test_util.rs
model/src/check/: mod.rs  modifier.rs  outcome.rs
model/tests/: skill_checks.rs
model/tests/it/: evaluate_partial.rs  main.rs  skill_checks.rs
scholle/: Cargo.toml  README.md
scholle/src/: builtin.rs  context.rs  error.rs  lexer.rs  lib.rs  operators.rs  parser.rs  runtime.rs  span.rs
