[package]
name = "dioxus-test-utils"
version = "0.1.0"
edition = "2024"

[dependencies]
cssparser = "0.35.0"
dioxus-core = "=0.7.0-alpha.3"
dioxus-hooks = "=0.7.0-alpha.3"
dioxus-html = "=0.7.0-alpha.3"
dioxus-signals = "=0.7.0-alpha.3"
futures = "0.3.31"
html-escape = "0.2.13"
kernal = "0.4.0"
precomputed-hash = "0.1.1"
selectors = "0.30.0"
slab = "0.4.10"
string_cache = "0.8.9"
