[package]
name = "frontend"
version = "0.1.0"
authors = ["florian1345 <florian1345@gmx.de>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.0-alpha.1", features = [] }
model = { path = "../model" }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
