[package]
name = "model"
version = "0.1.0"
edition = "2024"

[dependencies]
kernal = { version = "0.4.0", optional = true }
rayon = "1.10.0"

[dev-dependencies]
rstest = "0.25.0"
rstest_reuse = "0.7.0"
model = { path = ".", features = [ "test-util" ]}
scholle = { path = "../scholle" }

[features]
test-util = [ "dep:kernal" ]
